Fix button alignment

--- a/htdocs/css/jumbotron.css
+++ b/htdocs/css/jumbotron.css
@@ -385,12 +385,14 @@ footer div.full h2 {
 }
 
 footer .list-group {
-background-color:
-    inherit;
+    background-color: inherit;
 }
 
 footer .list-group-item {
-border:
-    none;
+    border: none;
     padding-bottom: 0;
+}
+
+.horizontal-buttons {
+    padding: 0 10px;
 }
